--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -26,6 +26,6 @@ jobs:
       # Runs a single command using the runners shell
       - name: Build docker image
         run: |
-          docker build -t circlek-gas-price-image .
-          docker push docker.pkg.github.com/codermango/circlek-gas-price/circlek-gas-price-image
+          docker build -t docker.pkg.github.com/codermango/circlek-gas-price/circlek-gas-price-image:0.04 .
+          docker push docker.pkg.github.com/codermango/circlek-gas-price/circlek-gas-price-image:0.0.4
 
