--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -26,6 +26,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Build docker image
         run: |
+          docker login https://docker.pkg.github.com -u codermango --password ${{ secrets.GITHUB_TOKEN }}
           docker build -t docker.pkg.github.com/codermango/circlek-gas-price/circlek-gas-price-image:0.0.4 .
           docker push docker.pkg.github.com/codermango/circlek-gas-price/circlek-gas-price-image:0.0.4
 
